# mathmetods

./: README.md
lab1/: .gitignore  CMakeLists.txt  runner.ipynb
lab1/src/: main.cpp  storage.cpp  storage.hpp  utils.cpp  utils.hpp  word_splitting.cpp  word_splitting.hpp
